[tool.poetry]
name = "gnome-pomodoro-client"
version = "0.1.1"
description = "A simple dbus client for gnome-pomodoro."
authors = ["Angus Hollands <goosey15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydbus = "^0.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gnome-pomodoro-client = 'gnome_pomodoro_client.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
